Se modifican varias cosas del PDFSELECTOR pero sin cambios importantes

--- a/src/pages/pdf-selector/pdf-selector.scss
+++ b/src/pages/pdf-selector/pdf-selector.scss
@@ -1,5 +1,7 @@
 page-pdf-selector {
     .img{
-        width: 30%;
+        min-width: 50px;
+        width: 20%;
+        max-width: 200px;
     }
 }
